# test-ci-cd-sonar

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: ci.yml  sonar.yml
test_ci_cd_sonar/: __init__.py  test_init.py
