[project]
name = "test_ci_cd_sonar"
description = "Test sonar integration for gammapy"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "The Gammapy developers", email = "gammapy-coordination-l@in2p3.fr" }
]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "astropy>=6.0",
    "pyyaml>=5.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://gammapy.org"
Documentation = "https://docs.gammapy.org/dev/"
Source = "https://github.com/gammapy/gammapy"

[build-system]
requires = [
    "setuptools >= 77.0.3",
    "wheel",
    "numpy >= 2.0.0rc1",
    "setuptools_scm[toml] >= 8",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
all = [
    "naima",
    "requests",
    "tqdm",
    "ipywidgets",
    "ray[default]>=2.9",
    "ultranest",
    "numba",
]
all_no_ray = [
    "naima",
    "requests",
    "tqdm",
    "ipywidgets",
    "ultranest",
    "numba",
]
cov = [
    "naima",
    "requests",
    "tqdm",
    "ipywidgets",
    "ultranest",
    "numba",
]
test = [
    "pytest-astropy",
    "pytest-xdist",
    "pytest",
    "docutils",
    "sphinx",
]


[tool.pytest.ini_options]
filterwarnings = [
    "error::astropy.utils.exceptions.AstropyDeprecationWarning",
    "error::gammapy.utils.deprecation.GammapyDeprecationWarning",
    "error::matplotlib.MatplotlibDeprecationWarning",
]

[tool.setuptools_scm]
version_file = "test_ci_cd_sonar/version.py"
version_file_template = """
# Note that we need to fall back to the hard-coded version if either
# setuptools_scm can't be imported or setuptools_scm can't determine the
# version, so we catch the generic 'Exception'.
try:
    from setuptools_scm import get_version
    version = get_version(root='..', relative_to=__file__)
except Exception:
    version = '{version}'
"""

[tool.ruff]
exclude = ["docs", "dev"]
# Like black
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E741"]
extend-ignore = ["E203","E712"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
